# eulogy

./: .gitignore  Procfile  README.md  manage.py  pyproject.toml  requirements.txt
eulogy/: asgi.py  settings.py  urls.py  wsgi.py
eulogy/core/: views.py
eulogy/core/templates/: home.html
